# claude-setup

./: .gitignore  README.md  install.sh
agents/: cotacao-importacao.md  design-iterator.md  react-ui-engineer.md  ui-reviewer.md
profiles/: esp32.md  flutter.md  frontend-web.md  nextjs.md  systems.md  thingsboard-fork.md
skills/docs-api/: SKILL.md
skills/docs-structure/: SKILL.md
skills/flutter-ui/: SKILL.md
skills/fullbin/: SKILL.md
skills/gen-readme/: SKILL.md
skills/gen-tests/: SKILL.md
skills/init-project/: SKILL.md
skills/release/: SKILL.md
templates/esp32/: .gitignore  CLAUDE.md  README.md  platformio.ini
templates/esp32/docs/: PRD.md
templates/esp32/include/: config.h
templates/esp32/src/: main.cpp
templates/flutter/: CLAUDE.md  README.md
templates/flutter/docs/: PRD.md
templates/flutter/lib/: injection_container.dart
templates/orange-pi/: README.md
templates/systems/: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml
templates/systems/backend/: Dockerfile  pyproject.toml
templates/systems/backend/app/: main.py
templates/systems/backend/app/core/: config.py  database.py  logging.py  security.py
templates/systems/backend/migrations/: env.py
templates/systems/backend/scripts/: create_admin.py
templates/systems/backend/tests/: conftest.py
templates/systems/backend/tests/api/: test_health.py
templates/systems/docs/: PRD.md  TECHNICAL_DESIGN.md
templates/systems/frontend/: Dockerfile  index.html  package.json  vite.config.ts
templates/systems/frontend/src/: App.tsx  index.css  (+1 more)
(+3 files in other folders)
